--- a/client/views/settings/website-management/webhooks/webhook-add.html
+++ b/client/views/settings/website-management/webhooks/webhook-add.html
@@ -1,18 +1,26 @@
 <div class="side-panel__header side-panel__header--border-b">
-		<a class="icn-btn side-panel__close" ng-click="webPublisherSettings.toggleCreateWebhook(false)"><i class="icon-close-small"></i></a>
-		<h3 class="side-panel__heading" ng-if="!newWebhook.id" translate>Add Webhook</h3>
-		<h3 class="side-panel__heading" ng-if="newWebhook.id" translate>Edit Webhook</h3>
-	</div>
+  <a
+    class="icn-btn side-panel__close"
+    ng-click="webPublisherSettings.toggleCreateWebhook(false)"
+    ><i class="icon-close-small"></i
+  ></a>
+  <h3 class="side-panel__heading" ng-if="!newWebhook.id" translate>
+    Add Webhook
+  </h3>
+  <h3 class="side-panel__heading" ng-if="newWebhook.id" translate>
+    Edit Webhook
+  </h3>
+</div>
 
-	<div class="side-panel__content">
-		<div class="side-panel__content-block">
-			<form name="webPublisherSettings.webhookForm" class="flat">
-				<fieldset class="label-light">
-					<div class="item">
-						<sd-tag-input
-							ng-model="newWebhook.events"
-							data-label="Events"
-							data-items="[
+<div class="side-panel__content">
+  <div class="side-panel__content-block">
+    <form name="webPublisherSettings.webhookForm" class="flat">
+      <fieldset class="label-light">
+        <div class="item">
+          <sd-tag-input
+            ng-model="newWebhook.events"
+            data-label="Events"
+            data-items="[
 								'article[created]',
 								'article[updated]',
 								'article[published]',
@@ -29,37 +37,54 @@
 								'package[updated]',
 								'package[processed]'
 							]"
-							data-freetext="false"
-							data-max-results-to-show=20 >
-							<tags-input
-								ng-model="model"
-								add-from-autocomplete-only="{{items ? !freetext : false}}"
-								show-button="{{!!items}}"
-								display-property="{{field}}"
-								use-strings="{{!field}}"
-								data-max-results-to-show=20
-							></tags-input>
-						</sd-tag-input>
-					</div>
-					<div class="item" >
-						<label for="url" translate>URL</label>
-						<input type="text" class="line-input" id="url" ng-model="newWebhook.url">
-					</div>
+            data-freetext="false"
+            data-max-results-to-show="20"
+          >
+            <tags-input
+              ng-model="model"
+              add-from-autocomplete-only="{{items ? !freetext : false}}"
+              show-button="{{!!items}}"
+              display-property="{{field}}"
+              use-strings="{{!field}}"
+              data-max-results-to-show="20"
+            ></tags-input>
+          </sd-tag-input>
+        </div>
+        <div class="item">
+          <label for="url" translate>URL</label>
+          <input
+            type="text"
+            class="line-input"
+            id="url"
+            ng-model="newWebhook.url"
+            required
+          />
+        </div>
 
-					<div class="item">
-						<span ng-model="newWebhook.enabled" sd-switch=""></span><label ng-if="newWebhook.enabled">Enabled</label><label ng-if="!newWebhook.enabled">Disabled</label>
-					</div>
-				</fieldset>
-			</form>
-		</div>
-	</div>
-	<div class="side-panel__footer side-panel__footer--button-box">
-		<div class="flex-grid flex-grid--boxed-small flex-grid--wrap-items flex-grid--small-2">
-			<a class="btn btn--hollow" ng-click="webPublisherSettings.toggleCreateWebhook()">Cancel</a>
-			<button class="btn btn--primary"
-				ng-disabled="webPublisherSettings.webhookForm.$invalid || !webPublisherSettings.webhookForm.$dirty"
-				ng-click="webPublisherSettings.saveWebhook()">
-				Save
-			</button>
-		</div>
-	</div>
+        <div class="item">
+          <span ng-model="newWebhook.enabled" sd-switch=""></span
+          ><label ng-if="newWebhook.enabled">Enabled</label
+          ><label ng-if="!newWebhook.enabled">Disabled</label>
+        </div>
+      </fieldset>
+    </form>
+  </div>
+</div>
+<div class="side-panel__footer side-panel__footer--button-box">
+  <div
+    class="flex-grid flex-grid--boxed-small flex-grid--wrap-items flex-grid--small-2"
+  >
+    <a
+      class="btn btn--hollow"
+      ng-click="webPublisherSettings.toggleCreateWebhook()"
+      >Cancel</a
+    >
+    <button
+      class="btn btn--primary"
+      ng-disabled="!newWebhook.events.length || webPublisherSettings.webhookForm.$invalid || !webPublisherSettings.webhookForm.$dirty"
+      ng-click="webPublisherSettings.saveWebhook()"
+    >
+      Save
+    </button>
+  </div>
+</div>
