--- a/client/views/settings/website-management/manage-general.html
+++ b/client/views/settings/website-management/manage-general.html
@@ -53,14 +53,17 @@
     <div class="form__row">
       <span
         class="sd-toggle"
-        ng-class="{'checked' : newSite.apple_news_config}"
+        ng-class="{'checked' : newSite.apple_news_config && newSite.apple_news_config.channel_id !== null}"
         ng-click="webPublisherSettings.switchAppleNewsConfig()"
         ><span class="inner"></span
       ></span>
       <label>Apple News</label>
     </div>
 
-    <div class="form__row" ng-if="newSite.apple_news_config">
+    <div
+      class="form__row"
+      ng-if="newSite.apple_news_config && newSite.apple_news_config.channel_id !== null"
+    >
       <div class="sd-line-input">
         <label class="sd-line-input__label">Channel Id</label>
         <input
@@ -71,7 +74,10 @@
       </div>
     </div>
 
-    <div class="form__row" ng-if="newSite.apple_news_config">
+    <div
+      class="form__row"
+      ng-if="newSite.apple_news_config && newSite.apple_news_config.channel_id !== null"
+    >
       <div class="sd-line-input">
         <label class="sd-line-input__label">API Key</label>
         <input
@@ -82,7 +88,10 @@
       </div>
     </div>
 
-    <div class="form__row" ng-if="newSite.apple_news_config">
+    <div
+      class="form__row"
+      ng-if="newSite.apple_news_config && newSite.apple_news_config.channel_id !== null"
+    >
       <div class="sd-line-input">
         <label class="sd-line-input__label">API Key Secret</label>
         <input
