ui framework version bump. Datepicker implementation

--- a/client/views/settings/website-management/route-form.html
+++ b/client/views/settings/website-management/route-form.html
@@ -50,11 +50,12 @@
 
         <div class="item">
           <label for="routeDescription" translate>description</label>
-          <input 
-            type="text" 
-            class="line-input" 
-            id="routeDescription" 
-            ng-model="newRoute.description">
+          <input
+            type="text"
+            class="line-input"
+            id="routeDescription"
+            ng-model="newRoute.description"
+          />
         </div>
 
         <div
