--- a/client/styles/helperElements.scss
+++ b/client/styles/helperElements.scss
@@ -8,6 +8,15 @@
     no-repeat;
 }
 
+.sp-logo-pwa {
+  display: block;
+  float: right;
+  margin-right: 1rem;
+  width: 50px;
+  height: 30px;
+  background: transparent url(../images/PWA_logo.svg) center center no-repeat;
+}
+
 .absPosition {
   position: absolute;
 
