--- a/client/views/settings/website-management/manage-general.html
+++ b/client/views/settings/website-management/manage-general.html
@@ -46,8 +46,7 @@
           class="dropdown__toggle line-input"
           ng-model="newSite.default_language"
           ng-options="lang.qcode as lang.name for lang in webPublisherSettings.languages"
-        >
-        </select>
+        ></select>
       </div>
     </div>
     <div class="form__row">
@@ -133,6 +132,27 @@
               class="sd-line-input__input"
               type="text"
               ng-model="newSite.output_channel.config[name]"
+              required
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div ng-if="newSite.pwa_config && newSite.pwa_config.url">
+      <div class="form__row">
+        <h4 class="text--light text--uppercase">PWA settings</h4>
+      </div>
+      <div class="form__row" ng-repeat="(name, value) in newSite.pwa_config">
+        <div class="form__row-item">
+          <div class="sd-line-input sd-line-input--required">
+            <label class="sd-line-input__label" translate
+              >{{name.replace('_', ' ')}}</label
+            >
+            <input
+              class="sd-line-input__input"
+              type="text"
+              ng-model="newSite.pwa_config[name]"
+              placeholder="{{name === 'url' ? 'https://website.com' : null}}"
               required
             />
           </div>
