--- a/client/views/settings/website-management/tenant-list.html
+++ b/client/views/settings/website-management/tenant-list.html
@@ -22,6 +22,11 @@
         </button>
       </li>
       <li>
+        <button ng-click="webPublisherSettings.toggleSiteWizard('PWA')">
+          PWA
+        </button>
+      </li>
+      <li>
         <button ng-click="webPublisherSettings.toggleSiteWizard('Wordpress')">
           Wordpress
         </button>
@@ -33,7 +38,7 @@
   <div class="sd-loader" ng-if="loading"></div>
   <a
     class="btn btn--sd-green btn--icon-only-circle btn--large sd-shadow--z4 fixedPosition fixedPosition--bottomRight"
-    style="z-index:1"
+    style="z-index: 1"
     ng-click="webPublisherSettings.toggleInfoCarousel()"
     ><i class="icon-info-large"></i
   ></a>
