--- a/client/styles/_publisher.scss
+++ b/client/styles/_publisher.scss
@@ -23,10 +23,10 @@
 
 .modal--kindafullscreen {
   position: fixed;
-  left: 48px;
-  right: 0px;
-  top: 49px;
-  bottom: 32px;
+  left: 50px !important;
+  right: 0px !important;
+  top: 40px !important;
+  bottom: 25px !important;
   align-items: flex-start;
   flex-direction: column;
   overflow: hidden;
@@ -35,15 +35,15 @@
 }
 
 .modal--kindafullscreen .modal__dialog {
-  width: 100%;
-  height: 100%;
-  max-width: 100%;
+  width: 100% !important;
+  height: 100% !important;
+  max-width: 100% !important;
 }
 .modal--kindafullscreen .modal__content {
   margin: 0;
 }
 .modal--kindafullscreen .modal__content .modal__body {
-  max-width: 100%;
+  max-width: 100% !important;
 }
 
 .listLimitNotification {
